--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="description" content="">
 
      <!-- social media stuff -->
-    <link rel="image_src" href="">
+    <link rel="image_src" href="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:title" content="Kazu - Learn to read Japanese numbers">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:url" content="http://sebpearce.com/kazu/">
     <meta property="og:site_name" content="sebpearce.com">
     <meta property="og:description" content="If you're having trouble getting big numbers right in English or Japanese, try this.">
@@ -33,13 +33,22 @@
 </head>
 
 <body>
+    <!-- FB like button -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Twitter button -->
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
     <!-- FB and website link -->
     <div id="links-left">
-        <div class="fb-like" data-href="http://sebpearce.com/come-again/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" style="margin-bottom: 5px"></div>&nbsp;
+        <div class="fb-like" data-href="http://sebpearce.com/kazu/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>&nbsp;
         <a href="http://sebpearce.com">sebpearce.com</a>
     </div>    
     <div id="links-right">
