--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:image" content="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:url" content="http://sebpearce.com/kazu/">
     <meta property="og:site_name" content="sebpearce.com">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="If you're having trouble getting big numbers right in English or Japanese, try this.">
 
     <!-- normalize -->
