--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="image_src" href="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:title" content="Kazu - Learn to read Japanese numbers">
     <meta property="og:image" content="http://sebpearce.com/kazu/kazu_screenshot.png">
-    <meta property="og:url" content="sebpearce.com/kazu/">
+    <meta property="og:url" content="http://sebpearce.com/kazu/">
     <meta property="og:site_name" content="sebpearce.com">
     <meta property="og:type" content="website">
     <meta property="og:description" content="If you're having trouble getting big numbers right in English or Japanese, try this.">
