change link rel image src

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
 
      <!-- social media stuff -->
-    <link rel="image_src" href="http://sebpearce.com/kazu/kazu_screenshot.png">
+    <link rel="image_src" href="kazu_screenshot.png">
     <meta property="og:title" content="Kazu - Learn to read Japanese numbers">
     <meta property="og:image" content="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:url" content="http://sebpearce.com/kazu/">
