add fb admins again

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:site_name" content="sebpearce.com">
     <meta property="og:type" content="website">
     <meta property="og:description" content="If you're having trouble getting big numbers right in English or Japanese, try this.">
+    <meta property="fb:admins" content="673372761" /> 
     <meta property="fb:app_id" content="611704965575973" /> 
 
     <!-- normalize -->
