--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
 
      <!-- social media stuff -->
-    <link rel="image_src" href="kazu_screenshot.png">
+    <link rel="image_src" href="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:title" content="Kazu - Learn to read Japanese numbers">
     <meta property="og:image" content="http://sebpearce.com/kazu/kazu_screenshot.png">
     <meta property="og:url" content="http://sebpearce.com/kazu/">
@@ -99,6 +99,15 @@
 
     <script src="jquery-1.11.0.js"></script>
     <script src="kazu.js"></script>
+
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-48318340-1', 'sebpearce.com');
+    ga('send', 'pageview');
+    </script>
 
 
 </body>
