--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Kazu</title>
+    <title>Kazu: Learn to read Japanese/English numbers</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="">
+    <meta name="description" content="If you're having trouble understanding big numbers in English or Japanese, try this.">
 
     <!-- Apple icons -->
     <link rel="apple-touch-icon" href="touch-icon-iphone.png">
